tests/int/check_command/snapshots/integration__int__check_command__layers__should_allow_overlapping_groups_when_clean.snap
---
source: tests/int/check_command/layers.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_overlapping_clean.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
