tests/int/check_command/snapshots/integration__int__check_command__layers__should_annotate_violations_with_apis.snap
---
source: tests/int/check_command/layers.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_layers_violated.toml
    - "--show-apis"
---
success: false
exit_code: 1
----- stdout -----
crawk check: 3 violations

  LAYER analyzer -> parser [ParserType]   (rule: layer 'app' forbids upward dependency (analyzer -> parser))
  LAYER cli -> analyzer [AnalyzerType]   (rule: layer 'app' forbids upward dependency (cli -> analyzer))
  LAYER parser -> discover [DiscoverType]   (rule: layer 'app' forbids upward dependency (parser -> discover))

----- stderr -----
