tests/int/check_command/snapshots/integration__int__check_command__layers__should_report_upward_violations.snap
---
source: tests/int/check_command/layers.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_layers_violated.toml
---
success: false
exit_code: 1
----- stdout -----
crawk check: 3 violations

  LAYER analyzer -> parser   (rule: layer 'app' forbids upward dependency (analyzer -> parser))
  LAYER cli -> analyzer   (rule: layer 'app' forbids upward dependency (cli -> analyzer))
  LAYER parser -> discover   (rule: layer 'app' forbids upward dependency (parser -> discover))

----- stderr -----
